Bug 37792 - ICE in gfc_conv_array_initializer; works with -fno-range-check
Summary: ICE in gfc_conv_array_initializer; works with -fno-range-check
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: fortran (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: diagnostic, ice-on-invalid-code
Depends on:
Blocks:
 
Reported: 2008-10-10 05:52 UTC by Tobias Burnus
Modified: 2008-11-24 19:21 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Burnus 2008-10-10 05:52:47 UTC
The following program gives an ICE:
internal compiler error: in gfc_conv_array_initializer, at fortran/trans-array.c:3976

However, it works when one uses -fno-range-check

See: http://gcc.gnu.org/ml/fortran/2008-10/msg00078.html
Comment 1 Tobias Burnus 2008-10-11 15:32:19 UTC
Approved Patch: http://gcc.gnu.org/ml/fortran/2008-10/msg00084.html
Comment 2 Paul Thomas 2008-10-12 09:39:40 UTC
Subject: Bug 37792

Author: pault
Date: Sun Oct 12 09:38:18 2008
New Revision: 141072

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=141072
Log:
2008-10-12  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/37792
	* fortran/resolve.c (resolve_fl_variable): Simplify the
	initializer if there is one.

2008-10-12  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/37792
	* gfortran.dg/arithmetic_overflow_1.f90: New test.


Added:
    trunk/gcc/testsuite/gfortran.dg/arithmetic_overflow_1.f90
Modified:
    trunk/gcc/fortran/ChangeLog
    trunk/gcc/fortran/resolve.c
    trunk/gcc/testsuite/ChangeLog

Comment 3 Paul Thomas 2008-11-24 19:14:42 UTC
Subject: Bug 37792

Author: pault
Date: Mon Nov 24 19:13:12 2008
New Revision: 142169

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=142169
Log:
2008-11-24  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/37792
	* fortran/resolve.c (resolve_fl_variable): Simplify the
	initializer if there is one.

2008-11-24  Steven G. Kargl  <kargls@comcast.net>

	PR fortran/37792
	* gfortran.dg/arithmetic_overflow_1.f90: New test.

2008-11-24  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/35681
	* gfortran.dg/elemental_dependency_1.f90: Correct strings in test.


Added:
    branches/gcc-4_3-branch/gcc/testsuite/gfortran.dg/arithmetic_overflow_1.f90
Modified:
    branches/gcc-4_3-branch/gcc/fortran/ChangeLog
    branches/gcc-4_3-branch/gcc/fortran/resolve.c
    branches/gcc-4_3-branch/gcc/testsuite/ChangeLog
    branches/gcc-4_3-branch/gcc/testsuite/gfortran.dg/elemental_dependency_1.f90

Comment 4 Paul Thomas 2008-11-24 19:21:53 UTC
Fixed on trunk and 4.3

Thanks for the report

Paul